# ekko

./: .gitignore  Cargo.toml  DESIGN.md  PLAN.md  README.md  flake.nix  result
.pi/skills/next/: SKILL.md
.pi/skills/orchestrate/: SKILL.md
.pi/skills/parallel-plan/: SKILL.md  monitor.sh  spawn-worker.sh
crates/ekko/: Cargo.toml
crates/ekko-builtins/: Cargo.toml
crates/ekko-builtins/src/: bell.rs  command_mode.rs  env_file.rs  grouping.rs  help.rs  keybindings.rs  leader.rs  lib.rs  naming.rs  panes.rs  resurrection.rs  rows.rs  scroll_mode.rs  sidebar.rs  statusbar.rs  theme.rs
crates/ekko-client/: Cargo.toml
crates/ekko-client/src/: borders.rs  clipboard.rs  drawctx.rs  event_loop.rs  gridblit.rs  input.rs  lib.rs  scene.rs  sessions.rs  spawn.rs  state.rs
crates/ekko-config/: Cargo.toml
crates/ekko-config/src/: lib.rs
crates/ekko-event/: Cargo.toml
crates/ekko-event/src/: lib.rs
crates/ekko-ext/: Cargo.toml
crates/ekko-ext/src/: builder.rs  command.rs  draw.rs  host.rs  keybinding.rs  layout.rs  lib.rs  manifest.rs  mode.rs  overlay.rs  runtime.rs  snapshot.rs  surface.rs  traits.rs  visual.rs
crates/ekko-grid/: Cargo.toml
crates/ekko-grid/src/: ansi.rs  cell_surface.rs  charmtone.rs  color.rs  damage.rs  layout.rs  lib.rs  packed.rs  selection.rs  theme.rs
crates/ekko-keycast/: Cargo.toml
crates/ekko-keycast/src/: lib.rs
crates/ekko-lua/: Cargo.toml
crates/ekko-lua/src/: config.rs  convert.rs  draw.rs  lib.rs
crates/ekko-lua/tests/: bridge.rs  config.rs
crates/ekko-proto/: Cargo.toml
crates/ekko-proto/src/: frame.rs  lib.rs  msg.rs  socket.rs
crates/ekko-pty/: Cargo.toml
crates/ekko-pty/src/: io.rs  lib.rs  reaper.rs  spawn.rs
crates/ekko-resurrection/: Cargo.toml
crates/ekko-resurrection/src/: lib.rs
crates/ekko-server/: Cargo.toml
crates/ekko-server/src/: client_io.rs  grid.rs  hub.rs  input_compat.rs  lib.rs  logging.rs  pty_io.rs  pty_writer.rs  terminal_pane.rs  topology.rs  vt_compat.rs
crates/ekko-server/tests/: daemon.rs  extensions.rs
crates/ekko-tui/: Cargo.toml
crates/ekko-tui/src/: cells.rs  clock.rs  color_cap.rs  lib.rs  palette.rs  spinner.rs  style.rs  symbols.rs  terminal.rs  theme.rs
crates/ekko/src/: main.rs
crates/vt100/: Cargo.toml
crates/vt100/src/: attrs.rs  callbacks.rs  grid.rs  lib.rs  parser.rs  perform.rs  row.rs  screen.rs  term.rs
examples/: leader-map.lua  pane-keys.lua  scroll-mode.lua  spawn-hook.lua
