[package]
name = "ekko-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
directories.workspace = true
interprocess.workspace = true
libc.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
