[package]
name = "ekko-pty"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
close_fds.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
signal-hook.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
