[package]
name = "ekko-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
unicode-segmentation.workspace = true
unicode-width.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
vt100.workspace = true

[lints]
workspace = true
